--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,23 @@ h5 {
 .btn-floating:hover {
   background-color: #ee6e72;
 }
+.divider {
+  display: block;
+  background-color: #ffffff;
+}
+#jumbotron {
+  margin-top: 60px;
+  display: block;
+  background-color: #ee6e721d;
+  border-radius: 10px;
+  height: 320px;
+}
+.jumboHeader {
+  font-size: 48px;
+  color: #ee6e72a3;
+  padding-left: 60px;
+  margin-bottom: -10px;
+}
 .modal {
   height: 80%;
   width: 600px;
