--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,20 +31,25 @@ h5 {
 }
 .divider {
   display: block;
-  background-color: #ffffff;
+  background-color: #dedede;
 }
 #jumbotron {
   margin-top: 60px;
   display: block;
-  background-color: #ee6e721d;
-  border-radius: 10px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
   height: 320px;
 }
 .jumboHeader {
   font-size: 48px;
   color: #ee6e72a3;
-  padding-left: 60px;
+  padding-left: 32px;
   margin-bottom: -10px;
+}
+.jumboContent {
+  padding: 24px;
+  font-size: 18px;
+  color: #9a9a9a;
 }
 .modal {
   height: 80%;
