New layout for home.html & moved imgs to assets/

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,9 @@ h5 {
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
   color: #ee6e72;
 }
+.brandColor {
+  color: #ee6e72a3;
+}
 .btn-flat {
   color: #ee6e72;
 }
@@ -49,25 +52,24 @@ h3 {
   font-style: italic;
 }
 #jumbotron {
-  margin-top: 60px;
   display: block;
-  background-color: #f2f2f2f0;
+  /* background-color: #f2f2f2f0; */
   border-radius: 5px;
   height: auto;
 }
 .jumboHeader {
   font-size: 48px;
-  color: #ee6e72a3;
+  color: #8a8a8aa3;
   padding-left: 32px;
   margin-bottom: -10px;
 }
 .jumboContent {
   padding: 24px;
-  font-size: 18px;
   color: #9a9a9a;
 }
 .jumboText {
   padding-bottom: 24px;
+  font-size: 24px;
 }
 .modal {
   height: 320px;
@@ -113,9 +115,10 @@ nav ul a:hover {
   text-decoration: none;
   background-color: #ed7d81;
 }
-/* #specs {
-  opacity: 25%;
-} */
+.parallax-container {
+  height: 400px;
+  background-color: hsla(343, 31%, 0%, 0.25);
+}
 .topRepo {
   font-size: 18px;
   color: #9a9a9a;
